fixed button post url bug

--- a/AppDemo/Pages/Joke.cshtml
+++ b/AppDemo/Pages/Joke.cshtml
@@ -14,7 +14,7 @@
     </div>
 
     <div class="text-center">
-        <form asp-page-handler="button" method="post">
+        <form method="post">
             <button class="btn btn-primary">Get Joke</button>
         </form>
     </div>
